# usul

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  License.md  License.txt  ReadMe.md  azure-pipelines.yml  build.py  conanfile.py  npm-shrinkwrap.json  package.json  run_test.sh  run_tests.sh  watch_filter.js
Usul/: Version.h
Usul/Math/: Functions.h  Vector3.h
cmake/: export.cmake  functions.cmake  output_dirs.cmake  usul-config-version.cmake.in  usul-config.cmake.in
config/: Config.h.in  Version.h.in
include/Usul/: Version.h
include/Usul/Math/: Base.h  CloseFloat.h  Constants.h  ErrorChecker.h  Functions.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
include/Usul/Strings/: Format.h
include/Usul/Tools/: Cast.h
scripts/: configure_conan.sh
source/: CMakeLists.txt
source/Usul/: CMakeLists.txt  Define.h  Export.h
source/Usul/Algorithms/: Revolution.h  Sphere.h
source/Usul/Base/: CMakeLists.txt  ObjectMap.cpp  ObjectMap.h  Referenced.cpp  Referenced.h  Typed.cpp  Typed.h
source/Usul/Bits/: Bits.h
source/Usul/Errors/: CMakeLists.txt  Check.h  Exceptions.h  Handler.cpp  Handler.h  StackTrace.h
source/Usul/File/: Buffer.h  Functions.h
source/Usul/IO/Redirect/: Base.h  Callback.h  File.h  String.h
source/Usul/Interfaces/: IPlugin.h  IUnknown.h
source/Usul/Jobs/: Job.cpp  Job.h  Manager.cpp  Manager.h
source/Usul/Macros/: TokenAppend.h  Trace.h
source/Usul/Math/: Base.h  Box.h  CloseFloat.h  Constants.h  ErrorChecker.h  Functions.h  Intersect.h  Line.h  Line2.h  Line3.h  Matrix44.h  Random.h  Sequence.h  Sphere.h  Three.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
source/Usul/Plugins/: Helper.h  Library.cpp  Library.h  Manager.cpp  Manager.h
source/Usul/Pointers/: Functions.h  Intrusive.h  Pointers.h  QueryPointer.h  SmartPointer.h
source/Usul/Properties/: Map.cpp  Map.h  Matrix44.h  Object.cpp  Object.h  Property.h  Vector2.h  Vector3.h  Vector4.h
source/Usul/Strings/: CMakeLists.txt  Copy.cpp  Copy.h  Format.h
source/Usul/System/: Environment.cpp  Environment.h  LastError.cpp  LastError.h
source/Usul/Time/: Now.cpp  Now.h
source/Usul/Tools/: Any.h  Cast.h  Counter.cpp  Counter.h  NoCopying.h  NoThrow.h  Properties.h  ScopedCall.h
source/Usul/Traits/: Matrix44.h
src/Usul/: CMakeLists.txt
src/Usul/Math/: CMakeLists.txt  Functions.h
src/Usul/Tools/: CMakeLists.txt  Cast.h
tests/: CMakeLists.txt  Main.cpp  Math.cpp
tests/Helpers/: Classes.cpp  Classes.h  ITest1.h  ITest2.h  Instances.cpp  Instances.h
tests/Usul/: CMakeLists.txt  Main.cpp  Version.cpp
tests/Usul/Algorithms/: Revolution.cpp
tests/Usul/Base/: Referenced.cpp
tests/Usul/Bits/: Bits.cpp
tests/Usul/Errors/: Check.cpp
tests/Usul/File/: Buffer.cpp
tests/Usul/IO/: Redirect.cpp
tests/Usul/Jobs/: Manager.cpp
tests/Usul/Math/: Base.cpp  Box.cpp  CMakeLists.txt  CloseFloat.cpp  Functions.cpp  Line2.cpp  Line3.cpp  Main.cpp  Matrix44.cpp  Random.cpp  Sequence.cpp  Three.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/Usul/Pointers/: Functions.cpp  Intrusive.cpp  Pointers.cpp  QueryPointer.cpp  SmartPointer.cpp
tests/Usul/Properties/: Map.cpp  Property.cpp
tests/Usul/Strings/: Format.cpp
tests/Usul/Time/: Now.cpp
tests/Usul/Tools/: Any.cpp  Cast.cpp  NoThrow.cpp  Properties.cpp  ScopedCall.cpp
