
################################################################################
#
#  Copyright (c) 2019, Perry L Miller IV
#  All rights reserved.
#
################################################################################

################################################################################
#
#  CMake file for the Usul libraries.
#
################################################################################

# Also process the CMakeLists.txt files found in these directories.
add_subdirectory ( Math )
